...
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="Name"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/UsernameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/UID_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:onClick="generateUID"
        android:text="Generate UID" />
</LinearLayout>
