...
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    tools:context=".AddFriendActivity">

    <TextView
        android:id="@+id/AddFriendTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add friend"
        android:textSize="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your UID"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/YourUIDDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="U123456789"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/FriendsUIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Friend's UID"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/FriendsUIDEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Friend's UID"
            android:inputType="text"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:text="Submit"/>

</LinearLayout>

