...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/triangle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:scaleX="0.5"
            app:srcCompat="@drawable/triangle"
            app:layout_constraintTop_toTopOf="@id/outerCircle"
            app:layout_constraintStart_toStartOf="@id/outerCircle"
...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp">

        <Button
            android:id="@+id/zoom_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_gravity="start|center_vertical"
            android:gravity="center" />

        <Button
            android:id="@+id/zoom_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_gravity="end|center_vertical"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/addLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Add Friend"
        android:onClick="addFriend" />
    <TextView
        android:id="@+id/GreenDot"
        android:layout_width="71dp"
        android:layout_height="98dp"
        android:text="\u2022"
...
